Bug 873391 - Volume state changes may get processed out of order in child processes. r=qDot