dom/ipc/ContentChild.cpp
@@ -77,6 +77,7 @@
 
 #if defined(MOZ_WIDGET_GONK)
 #include "nsVolume.h"
+#include "nsVolumeService.h"
 #endif
 
 #ifdef XP_WIN
@@ -1186,9 +1187,10 @@ ContentChild::RecvFileSystemUpdate(const nsString& aFsName,
     nsRefPtr<nsVolume> volume = new nsVolume(aFsName, aVolumeName, aState,
                                              aMountGeneration);
 
-    nsCOMPtr<nsIObserverService> obs = mozilla::services::GetObserverService();
-    NS_ConvertUTF8toUTF16 stateStr(volume->StateStr());
-    obs->NotifyObservers(volume, NS_VOLUME_STATE_CHANGED, stateStr.get());
+    nsRefPtr<nsVolumeService> vs = nsVolumeService::GetSingleton();
+    if (vs) {
+        vs->UpdateVolume(volume);
+    }
 #else
     // Remove warnings about unused arguments
     unused << aFsName;
